[package]
name = "aesem_op"
version = "0.1.0"
edition = "2021"
authors = [ "Etienne Palanga" ]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0" # Apache/MIT
petgraph = "0.6.2" # Apache/MIT
rand = "0.8.5" # Apache/MIT
thiserror = "1.0.37" # Apache/MIT
